fix: better Dark mode

--- a/server/static_src/scss/styles.scss
+++ b/server/static_src/scss/styles.scss
@@ -1,9 +1,10 @@
-$list-group-bg: #f8f9fa;
-$list-group-hover-bg: #fff;
+$list-group-bg: transparent;
+$list-group-hover-bg: gray;
 $offcanvas-border-color: transparent;
 $offcanvas-horizontal-width: 300px;
 $box-max-width: 1304px;
 $collapse-toggler-color: #212529;
+$collapse-toggler-color-dark: #fff;
 $custom-table-padding: 0.375rem;
 $bootstrap-icons-font-dir: "~bootstrap-icons/font/fonts";
 
@@ -22,7 +23,7 @@ $bootstrap-icons-font-dir: "~bootstrap-icons/font/fonts";
   max-width: $box-max-width;
 }
 
-.collapse-toggler {
+.collapse-toggler-light {
   &:before {
     display: inline-block;
     border-bottom: 2px solid $collapse-toggler-color;
@@ -42,6 +43,14 @@ $bootstrap-icons-font-dir: "~bootstrap-icons/font/fonts";
       transform: rotate(45deg);
     }
   }
+}
+
+.collapse-toggler-dark {
+    @extend .collapse-toggler-light;
+    &:before {
+        border-bottom: 2px solid $collapse-toggler-color-dark;
+        border-right: 2px solid $collapse-toggler-color-dark;
+    }
 }
 
 .data-row {
